2016-12-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_decrypt_session): New function to
	decrypt a multipart/encrypted using a session_key.

	* gmime/gmime-crypto-context.c (g_mime_crypto_context_decrypt_session): New
	function to decrypt a MIME part using a session_key.

	* gmime/gmime-gpg-context.c (gpg_ctx_get_argv): Added support for
	--override-session-key-id for the new decrypt_session() method.
	(gpg_ctx_op_start): Updated to create the secret_fd when passing a session_key
	as well.
	(gpg_ctx_write_session_key): New function to write the session_key to gpg.
	(gpg_decrypt_session): New function to decrypt a MIME part using a session_key.

	Thanks to Daniel Kahn Gillmor for this patch.

2016-12-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Advance over the SESSION_KEY
	identifier before calling next_token() so that next_token() actually gets the
	sesstion key token that we want. Also fixed to free any existing session_key
	if gpg somehow sends us multiple SESSION_KEY responses.

	Thanks to Daniel Kahn Gillmor for this patch.

2016-12-03  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (next_token): Now takes a 'secret' argument to
	determine if it will overwrite the token within the buffer with '*' to
	prevent leaking of the secret token.
	(gpg_ctx_parse_status): Pass TRUE to next_token() when reading the
	SESSION_KEY token.

2016-12-02  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_free): Free the session_key.
	(gpg_ctx_get_argv): Pass --show-session-key to gpg if requested.
	(gpg_ctx_parse_status): Decode the session-key sent by gpg.
	(gpg_decrypt): Set the session_key on the decrypt result.
	(g_mime_gpg_context_get_retrieve_session_key): Added.
	(g_mime_gpg_context_set_retrieve_session_key): Added.

	* gmime/gmime-crypto-context.c (g_mime_decrypt_result_set_session_key): Added.