@@ -117,12 +117,24 @@ struct _GMimeCryptoContextClass {
 	GMimeDecryptResult *     (* decrypt_session)     (GMimeCryptoContext *ctx, const char *session_key,
 							  GMimeStream *istream, GMimeStream *ostream,
 							  GError **err);
+	
+	gboolean                 (* get_retrieve_session_key) (GMimeCryptoContext *ctx);
+	
+	int                      (* set_retrieve_session_key) (GMimeCryptoContext *ctx,
+							       gboolean retrieve_session_key,
+							       GError **err);
 };
 
 
 GType g_mime_crypto_context_get_type (void);
 
 void g_mime_crypto_context_set_request_password (GMimeCryptoContext *ctx, GMimePasswordRequestFunc request_passwd);
+
+gboolean g_mime_crypto_context_get_retrieve_session_key (GMimeCryptoContext *ctx);
+
+int g_mime_crypto_context_set_retrieve_session_key (GMimeCryptoContext *ctx,
+						    gboolean retrieve_session_key,
+						    GError **err);
 
 /* digest algo mapping */
 GMimeDigestAlgo g_mime_crypto_context_digest_id (GMimeCryptoContext *ctx, const char *name);
