@@ -444,6 +444,7 @@ int main (int argc, char *argv[])
 	int i;
 	GMimeStream *stream = NULL, *cleartext = NULL;
 	char *session_key = NULL;
+	GError *err = NULL;
 	
 	g_mime_init (0);
 	
@@ -466,7 +467,17 @@ int main (int argc, char *argv[])
 	
 	ctx = g_mime_gpg_context_new (request_passwd, NULL);
 	g_mime_gpg_context_set_always_trust ((GMimeGpgContext *) ctx, TRUE);
-	g_mime_gpg_context_set_retrieve_session_key ((GMimeGpgContext *) ctx, TRUE);
+	if (g_mime_crypto_context_set_retrieve_session_key (ctx, TRUE, &err) != 0) {
+		fprintf (stderr, "Failed to set retrieve_session_key on GMimeGpgContext: %s\n",
+			 err ? err->message : "no error info returned" );
+		if (err)
+			g_error_free (err);
+		return EXIT_FAILURE;
+	}
+	if (!g_mime_crypto_context_get_retrieve_session_key (ctx)) {
+		fprintf (stderr, "We set retrieve_session_key on GMimeGpgContext, but it did not stay set.\n");
+		return EXIT_FAILURE;
+	}
 	
 	testsuite_check ("GMimeGpgContext::import");
 	try {
